--- a/src/Components/CalendarGridItem/CalendarGridItem.module.css
+++ b/src/Components/CalendarGridItem/CalendarGridItem.module.css
@@ -8,6 +8,7 @@
   /* border: 2px solid #474747; */
   color: #c1c1c1;
   display: flex;
+  gap: 10px;
   flex-direction: column;
   justify-content: space-between;
   font-size: 1.2rem;
