--- a/src/Components/ReusableComponents/Dropdown/DropdownContainer.module.css
+++ b/src/Components/ReusableComponents/Dropdown/DropdownContainer.module.css
@@ -1,8 +1,8 @@
 .dropdown {
 
-   align-items: center;
+   /* align-items: center;
    display: flex;
-   flex-direction: column;
-   gap: 15px;
+   flex-direction: column; */
+   /* gap: 15px; */
    position: relative;
 }
