--- a/src/Components/ReusableComponents/Dropdown/DropdownOptions/DropdownOptions.module.css
+++ b/src/Components/ReusableComponents/Dropdown/DropdownOptions/DropdownOptions.module.css
@@ -5,7 +5,7 @@
 } */
 
 .dropdownOptions {
-  background-color: rgba(43, 43, 43, 0.8);
+  background-color: rgb(39, 39, 39, .9);
 
   backdrop-filter: blur(3px);
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
@@ -15,6 +15,7 @@
   gap: 5px;
   padding: 15px 20px;
   position: absolute;
+  top: 80px;
   z-index: 10;
   max-height: 500px;
   overflow-y: scroll;
