--- a/src/Components/ReusableComponents/Dropdown/DropdownTop/DropdownTop.module.css
+++ b/src/Components/ReusableComponents/Dropdown/DropdownTop/DropdownTop.module.css
@@ -1,4 +1,13 @@
 .dropdownTop {
    cursor: pointer;
    text-align: center;
+   padding: 5px 10px;
+
+   
+}
+
+.dropdownTop:hover {
+   background-color: #272727;
+   /* background-color: rgb(43,43,43); */
+   border-radius: 8px;
 }
